# nf-metro

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/fix-issue/: SKILL.md
.claude/skills/render-topologies/: SKILL.md
.github/workflows/: docs.yml
docs/: REFACTOR_PLAN.md  WEBSITE_PLAN.md  guide.md  index.md  nextflow.md
examples/: rnaseq.mmd  rnaseq_sections.mmd  rnaseq_sections_manual.mmd  simple_pipeline.mmd  variant_calling.mmd  variant_calling_tuned.mmd
examples/guide/: 02_sections.mmd  03_fan_out.mmd  04_directions.mmd  05_file_icons.mmd  06a_without_hidden.mmd  06b_with_hidden.mmd
examples/topologies/: README.md  fold_stacked_branch.mmd  multi_line_bundle.mmd  parallel_independent.mmd  variant_calling.mmd
scripts/: build_gallery.py  render_topologies.py
src/nf_metro/: __init__.py  __main__.py  cli.py  convert.py
src/nf_metro/layout/: __init__.py  auto_layout.py  constants.py  engine.py  labels.py  layers.py  ordering.py  routing.py  section_placement.py
src/nf_metro/parser/: __init__.py  grammar.lark  mermaid.py  model.py
src/nf_metro/render/: __init__.py  animate.py  constants.py  icons.py  legend.py  style.py  svg.py
src/nf_metro/themes/: __init__.py  light.py  nfcore.py
tests/: golden_checksums.txt  layout_validator.py  test_auto_layout.py  test_cli.py  test_convert.py  test_corners.py  test_layout.py  test_parser.py  test_render.py  test_routing.py  test_topology_validation.py
tests/fixtures/: rnaseq_full.mmd  rnaseq_simple.mmd
tests/fixtures/topologies/: README.md  asymmetric_tree.mmd  deep_linear.mmd  (+9 more)
(+7 files in other folders)
