[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-metro"
version = "0.1.0"
description = "Generate metro-map-style SVG diagrams from Mermaid graph definitions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "drawsvg>=2.0",
    "lark>=1.1",
    "networkx>=3.0",
]

[project.scripts]
nf-metro = "nf_metro.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nf_metro"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
